# LogicLeap

./: .dockerignore  .env.example  .gitignore  Dockerfile.backend  Dockerfile.frontend  Makefile  README.md  compose.yaml
.github/: dependabot.yml
.github/workflows/: ci.yml
backend/: alembic.ini  entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 32d7bbfd4d03_initial_domain_schema.py  a232c1e79ee6_epic_context.py
backend/src/logicleap/: __init__.py  config.py  database.py  main.py  seed.py
backend/src/logicleap/api/: routes.py
backend/src/logicleap/application/: __init__.py  schemas.py  services.py
backend/src/logicleap/domain/: __init__.py  enums.py
backend/src/logicleap/domain/policies/: __init__.py  readiness.py  transitions.py
backend/src/logicleap/infrastructure/persistence/: models.py
backend/src/logicleap/mcp/: __init__.py  server.py
backend/tests/: test_health.py
backend/tests/integration/: test_api.py  test_epic_context.py  test_persistence.py
backend/tests/unit/: test_epic_context_mcp.py  test_readiness.py  test_transitions.py
docs/: architecture.md  state-machine.md
frontend/: index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  api.ts  main.tsx  navigation.css  styles.css  task-detail.css
frontend/src/app/: router.tsx
